# fastapi-pyspark-mongodb-pipeline

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  main.py
app/api/: aggregator.py  eventProcessor.py  utilities.py  utilitiesDataframe.py  writer.py
app/static/: arquiteura_s3_iceberg.drawio
app/tests/: test.py
data/: input_data.json  test.json
image/: .$pipeline-fastapi-arquitetura.drawio.bkp  flow.yuml  pipeline-fastapi-arquitetura.drawio
parquet_files/dados/originState=MG/destinationState=DF/: .part-00000-46ac3502-5ee1-44f0-925c-4b318fe144f4.c000.snappy.parquet.crc  part-00000-46ac3502-5ee1-44f0-925c-4b318fe144f4.c000.snappy.parquet
parquet_files/dados/originState=PR/destinationState=SC/: .part-00001-46ac3502-5ee1-44f0-925c-4b318fe144f4.c000.snappy.parquet.crc  part-00001-46ac3502-5ee1-44f0-925c-4b318fe144f4.c000.snappy.parquet
parquet_files/originState=MG/destinationState=DF/: .part-00001-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet.crc  part-00001-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet
parquet_files/originState=PR/destinationState=SC/: .part-00001-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet.crc  part-00001-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet
parquet_files/originState=RJ/destinationState=SP/: .part-00000-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet.crc  part-00000-8acb98c4-7c85-444c-bee4-90aad8ae8f8c.c000.snappy.parquet
