[tool.poetry]
name = "fastapi-pipe"
version = "0.1.0"
description = ""
authors = ["Ruda <filiperuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pymongo = "^4.10.1"
pyspark = "^3.5.3"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
