[tool.poetry]
name = "pipeline-pyspark-mongodb-fastapi"
version = "0.1.0"
description = ""
authors = ["Ruda <filiperuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
pyspark = "^3.5.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
